retrieveUnpackaged/objects/Application3__c.object
<CustomObject>
    <fields>
        <fullName>How_many_teams_are_being_requested__c</fullName>
        <label>Number of teams to complete this project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_weeks_will_it_take_to_complete__c</fullName>
        <label>Number of Weeks to Complete Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_project_will_meet_community_needs__c</fullName>
        <inlineHelpText>Describe how the proposed project will help to meet these needs. What will be the final outcome(s) of services provided?</inlineHelpText>
        <label>How project will meet community needs?</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IRS_Certificiation_of_Non_Profit_Status__c</fullName>
        <label>IRS Certificiation of Non-Profit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_communication_access_methods__c</fullName>
        <inlineHelpText>Identify available phones, fax, computer or internet access that can be made available to the team for official team business and project-related purposes.</inlineHelpText>
        <label>Primary Work Site Communication</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Identify_program_operating_site_s__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <label>Identify program operating site(s)</label>
        <picklist>
            <picklistValues>
                <fullName>In only one state</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In two or more states</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A territory without a service commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identify_the_pop_the_program_will_serve__c</fullName>
        <inlineHelpText>Select the populations the proposed program will serve. If you do not plan to serve any of the listed populations, select &quot;None&quot;</inlineHelpText>
        <label>Identify the pop. the program will serve</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment 21st Century Service Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans and  Military Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor and Mayor Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-focus Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy State &amp; School Ready to Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading at Grade Level by Third Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Ready for College &amp; Career</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successfully Entering the Workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping Kids on Track/Giving 2nd Chances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>If_No_please_specify__c</fullName>
        <label>If No, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_Applicant_Deliquen__c</fullName>
        <description>Field is shown when NCCC is checked on NOFA.</description>
        <label>If Yes, Please Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_EO_12372__c</fullName>
        <description>Field is shown when NCCC is checked on NOFA. KY</description>
        <label>If Yes, Please Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifyanyadditional__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifyanypossible__c</fullName>
        <inlineHelpText>If ‘Yes’, please provide required documentation to ensure the project meets OSHA standards as related to asbestos, lead paint, lead removal, hazardous waste, and other potential safety hazards.</inlineHelpText>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifysecurity__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifystatenationalvista__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_provide_your_explination_here__c</fullName>
        <label>If &quot;Yes&quot;, provide your explanation here</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Economic__c</fullName>
        <inlineHelpText>If you selected Other Economic Opportunity, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Energy__c</fullName>
        <inlineHelpText>If you selected Other Energy Conservation, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Enivironment_Ste__c</fullName>
        <inlineHelpText>If you selected Other Environmental Stewardship, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Enivronment__c</fullName>
        <inlineHelpText>If you selected Other Environmental Stewardship, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Health__c</fullName>
        <inlineHelpText>If you selected Other Healthy Futures, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Infrastructure__c</fullName>
        <inlineHelpText>If you selected Other Infrastructure Improvement, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Urban__c</fullName>
        <inlineHelpText>If you selected Other Urban and Rural Development, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Veterns__c</fullName>
        <inlineHelpText>If you selected Other Veterans and Military Families, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_capacity__c</fullName>
        <inlineHelpText>If you selected Other Capacity Building, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_disaster__c</fullName>
        <inlineHelpText>If you selected Other Disaster Services, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_education__c</fullName>
        <inlineHelpText>If you selected Other Education, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specifydiffcult__c</fullName>
        <label>If yes, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specifyhealthrestrictions__c</fullName>
        <label>If yes, please specify&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_your_org_currently_funded_by_CNCS__c</fullName>
        <inlineHelpText>Select Yes if your organization is funded fully or partially by CNCS.</inlineHelpText>
        <label>Funded by CNCS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_by_Inclement_Weather__c</fullName>
        <inlineHelpText>Could this project be impacted by inclement weather?&quot;
If yes is selected, the following field must be filled</inlineHelpText>
        <label>Impacted by Inclement Weather?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inclement_Weather_Work_Plan__c</fullName>
        <inlineHelpText>Include: Tasks in the sequence in which they will be addressed. This plan could be with a partner organization. The address, phone number &amp; site supervisor at the project site (if different than regular project site address).</inlineHelpText>
        <label>Inclement Weather Work Plan</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Information_available_FAPIIS_Review__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Information available?</label>
        <picklist>
            <controllingField>Subject_to_FAPIIS_Review__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Improvement_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Infrastructure Improvement</label>
        <picklist>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Improvement__c</fullName>
        <label>Infrastructure Improvement</label>
        <picklist>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inputs__c</fullName>
        <label>Inputs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification1__c</fullName>
        <label>Intermediary Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification__c</fullName>
        <label>Intermediary Justification</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Introductions_of_Team_to_Sponsor_Staff__c</fullName>
        <label>Introductions of Team to Sponsor Staff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_K_12_school__c</fullName>
        <description>Field is for Location Information on Application. KY</description>
        <label>Is this a K-12 school?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Area__c</fullName>
        <label>Issue Area</label>
        <picklist>
            <picklistValues>
                <fullName>Community and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEMA (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health/Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservatism (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban/Rural Development (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery/Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Areas__c</fullName>
        <label>Issue Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Natural &amp; Other Disasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship &amp; Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban &amp; Rural Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Namee__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Submission_Justification__c</fullName>
        <label>Late Submission Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Laundry_Facility_Street_Address__c</fullName>
        <label>Laundry Facility Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_and_Team__c</fullName>
        <label>Leadership and Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_App_ID__c</fullName>
        <label>Legacy App ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Project__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Emergency_facilities__c</fullName>
        <inlineHelpText>Identify local medical facilities, including address, telephone number, hours of operation, distance from the project site, and team lodging and local emergency response procedures (i.e. 911 response).</inlineHelpText>
        <label>List Emergency facilities</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Local_State_Federal_Government_Match__c</fullName>
        <inlineHelpText>Please provide applicant share breakdown</inlineHelpText>
        <label>Local, State, Federal Government Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Long_term__c</fullName>
        <label>Long term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIddle_Namee__c</fullName>
        <label>MIddle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Addressprimary__c</fullName>
        <label>Mailing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Rate_Percentage__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Match Rate Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mid_Term__c</fullName>
        <label>Mid Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitigating_Circumstances__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>Mitigating Circumstances</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NCCC_Dates_CP__c</fullName>
        <description>This field is for the Concept Paper type of Application.</description>
        <label>NCCC Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOFA_CRPP_Code__c</fullName>
        <formula>NOFA_RFP__r.Corporate_Program_Code__c</formula>
        <label>Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Due_Date__c</fullName>
        <formula>NOFA_RFP__r.Sub_Application_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOFA_Fiscal_Yr__c</fullName>
        <formula>TEXT( NOFA_RFP__r.Fiscal_Yr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA Fiscal Yr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_ID__c</fullName>
        <formula>NOFA_RFP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Name__c</fullName>
        <formula>NOFA_RFP__r.NOFA_name__c</formula>
        <label>NOFA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_Summary__c</fullName>
        <label>NOFA/RFP Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA/RFP ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_Summary__c</fullName>
        <label>NOFA Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Natural_and_Other_Disasters_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Natural and Other Disasters</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This is my new value</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Natural_and_Other_Disasters__c</fullName>
        <label>Natural and Other Disasters</label>
        <picklist>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Need1__c</fullName>
        <label>Need</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Negotiated_Indirect_Cost_Agreement__c</fullName>
        <label>Negotiated Indirect Cost Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Apps_of_Apps_org_will_submit__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <label>New Apps: # of Apps org will submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_App_for_Disaster_Services__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of App for Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Capacity_Building__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Capacity Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Economic_Opportunity__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Economic Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Education__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Environment_Stewardship__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Environment Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Healthy_Futures__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Healthy Futures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Apps_for_Vets_Military_Families__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <inlineHelpText>Only for State Service Commissions.  State Commissions are required to estimate the # of applications for each Focus Area.  The estimate should be based upon the anticipated Primary Focus Area for each application.</inlineHelpText>
        <label>No. of Apps for Vets/Military Families</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unduplicated_Volunteers__c</fullName>
        <label>Number of Unduplicated Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <label>Number of Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_elevator_speeches_created__c</fullName>
        <inlineHelpText>Provide the number of AmeriCorps members who will create and deliver elevator speeches</inlineHelpText>
        <label>Number of elevator speeches created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_episodic_volunteers_generated__c</fullName>
        <inlineHelpText>Number of episodic volunteers generated by AmeriCorps members</inlineHelpText>
        <label>Number of episodic volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_members_wearing_logo_every_day__c</fullName>
        <inlineHelpText>Provide the number of AmeriCorps members who will wear AmeriCorps logo every day</inlineHelpText>
        <label>Number of members wearing logo every day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_ongoing_volunteers__c</fullName>
        <inlineHelpText>Number of ongoing volunteers generated by AmeriCorps members</inlineHelpText>
        <label>Number of ongoing volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_teams_to_complete_this_proj_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <inlineHelpText>How many teams will it take a team of 8-12 members working FT to complete this project?</inlineHelpText>
        <label>Number of teams to complete this project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>